# apitrace

./: .dir-locals.el  .editorconfig  .emacs-dirvars  .gitignore  .gitmodules  .hgignore  .lvimrc  .travis.yml  Android.markdown  Android.mk  BUGS.markdown  CMakeLists.txt  DEBIAN.markdown  DEVELOPMENT.markdown  Dalvik.markdown  FORMAT.markdown  HACKING.markdown  INSTALL.markdown  LICENSE  NEWS.markdown  README  README.markdown  SConstruct  TODO  TODO.markdown  apitrace.css  apitrace.xsl  appveyor.yml  base.py  bmp.hpp  cglapi.py  cgltrace.py  codegen.py  compat.h  d2d1trace.py  d2dimports.hpp  d3d.py  d3d10.def  d3d10.py  d3d10_1.py  (+133 more)
cli/: CMakeLists.txt  README.markdown  apitrace.cpp  apitrace_cli.hpp  apitrace_dump.cpp  cli.hpp  cli_diff.cpp  cli_diff_images.cpp  cli_diff_state.cpp  cli_dump.cpp  cli_dump_images.cpp  cli_gltrim.cpp  cli_info.cpp  cli_leaks.cpp  cli_main.cpp  cli_pager.cpp  cli_pager.hpp  cli_pickle.cpp  cli_repack.cpp  cli_replay.cpp  cli_resources.cpp  cli_resources.hpp  cli_retrace.cpp  cli_retrace.hpp  cli_sed.cpp  cli_trace.cpp  cli_trim.cpp  cli_trim_auto.cpp  cli_trim_auto_analyzer.cpp  pickle.hpp  trace_analyzer.cpp  trace_analyzer.hpp  trace_tools.hpp  trace_tools_trace.cpp  trim_callset.cpp  trim_callset.hpp
common/: CMakeLists.txt  SConscript  formatter.hpp  highlight.cpp  highlight.hpp  image.cpp  image.hpp  image_png.cpp  image_pnm.cpp  json.hpp  log.hpp  os.hpp  os_backtrace.cpp  os_backtrace.hpp  os_binary.hpp  os_crtdbg.cpp  os_crtdbg.hpp  os_dl.hpp  os_memory.hpp  os_osx.hpp  os_osx.mm  os_path.hpp  os_posix.cpp  os_process.hpp  os_string.hpp  os_thread.hpp  os_thread_test.cpp  os_thread_win32.hpp  os_time.hpp  os_version.hpp  os_win32.cpp  os_workqueue.hpp  pickle.hpp  range.hpp  thread_pool.hpp  tls_wrapper.hpp  trace_api.hpp  trace_backtrace.cpp  trace_backtrace.hpp  trace_callset.cpp  (+50 more)
dispatch/: .gitignore  CMakeLists.txt  README.markdown  __init__.py  compat.h  d2dimports.hpp  d3d10_1imports.hpp  d3d10imports.hpp  d3d11imports.hpp  d3d12imports.hpp  d3d8imports.hpp  d3d9imports.hpp  d3derr.hpp  d3dimports.hpp  dcompimports.hpp  dispatch.py  dlopen.hpp  dxgiint.h  dxva2imports.hpp  dxvaint.h  eglimports.h  eglimports.hpp  glimports.h  glimports.hpp  glproc.cpp  glproc.py  glproc_core.hpp  glproc_egl.cpp  glproc_gl.cpp
frametrim/: CMakeLists.txt  frametrim.markdown  ft_d3d11.cpp  ft_d3d11.hpp  ft_d3d9.cpp  ft_d3d9.hpp  ft_dependecyobject.cpp  ft_dependecyobject.hpp  ft_frametrimmer.cpp  ft_frametrimmer.hpp  ft_main.cpp  ft_matrixstate.cpp  ft_matrixstate.hpp  ft_opengl.cpp  ft_opengl.hpp  ft_tracecall.cpp  ft_tracecall.hpp
gui/: .gitignore  CMakeLists.txt  README.markdown  adaptivedoublespinbox.cpp  adaptivedoublespinbox.h  androiddevicedialog.cpp  androiddevicedialog.h  androidfiledialog.cpp  androidfiledialog.h  androidretracer.cpp  androidretracer.h  androidutils.cpp  androidutils.h  apicalldelegate.cpp  apicalldelegate.h  apisurface.cpp  apisurface.h  apitrace.cpp  apitrace.h  apitracecall.cpp  apitracecall.h  apitracefilter.cpp  apitracefilter.h  apitracemodel.cpp  apitracemodel.h  argumentseditor.cpp  argumentseditor.h  calldurationgraph.h  glsledit.cpp  glsledit.h  graphwidget.cpp  graphwidget.h  imageviewer.cpp  imageviewer.h  jumpwidget.cpp  jumpwidget.h  leaktracethread.cpp  leaktracethread.h  loaderthread.cpp  loaderthread.h  (+38 more)
gui/graphing/: frameaxiswidget.cpp  frameaxiswidget.h  graphaxiswidget.cpp  graphaxiswidget.h  graphing.h  graphlabelwidget.h  graphview.cpp  graphview.h  graphwidget.cpp  graphwidget.h  heatmapverticalaxiswidget.cpp  heatmapverticalaxiswidget.h  heatmapview.cpp  heatmapview.h  histogramview.cpp  histogramview.h  timeaxiswidget.cpp  timeaxiswidget.h
gui/resources/: glreference-man.sh  glreference-registry.sh  glreference.tsv
helpers/: .gitignore  CMakeLists.txt  Makefile  README.markdown  com_ptr.hpp  d3d10size.hpp  d3d11size.hpp  d3d12event.hpp  d3d12pba.hpp  d3d12pipelinelibrary.hpp  d3d12size.hpp  d3d12slab.hpp  d3d7size.hpp  d3d8size.hpp  d3d9size.hpp  d3dcommonsize.hpp  d3dshader.cpp  d3dshader.hpp  d3dsize.hpp  dxgisize.hpp  eglsize.cpp  eglsize.hpp  floating_point_conversion.hpp  gl_trace.py  glfeatures.cpp  glfeatures.hpp  glprofile.cpp  glprofile.hpp  glsize.hpp  glsize.py  glspec.py  halffloat.hpp  spec.py
inject/: CMakeLists.txt  README.markdown  inject.h  injectee.cpp  injectee_iat.cpp  injectee_mhook.cpp  injector.cpp  uac.hpp
libpng/: CMakeLists.txt
retrace/: .gitignore  CMakeLists.txt  Info.plist  README.markdown  com_ptr.hpp  d3d10_1retrace.py  d3d10retrace.py  d3d10state.cpp  d3d10state.hpp  d3d10state_images.cpp  d3d11retrace.py  d3d11state.cpp  d3d11state.hpp  d3d11state_images.cpp  d3d7state.cpp  d3d7state_images.cpp  d3d8state.cpp  d3d8state_images.cpp  d3d9retrace.py  d3d9state.cpp  d3d9state.hpp  d3d9state_formats.cpp  d3d9state_images.cpp  d3dcommonretrace.py  d3dretrace.hpp  d3dretrace.py  d3dretrace_dxgi.hpp  d3dretrace_dxgi_misc.cpp  d3dretrace_dxgi_priv.cpp  d3dretrace_main.cpp  d3dretrace_ws.cpp  d3dstate.cpp  d3dstate.hpp  ddrawretrace.py  dllretrace.py  dxgiretrace.py  dxgistate.cpp  dxgistate.hpp  dxgistate_so.hpp  dxgistate_so.py  (+76 more)
scripts/: CMakeLists.txt  README  apitrace.PIXExp  autotrim.py  autotrim_track.py  convert.py  format.py  highlight.py  jsondiff.py  jsonextractimages.py  leaks.py  profileshader.py  retracediff.py  snapdiff.py  trace.py  tracecheck.py  tracediff.py  tracediff.sh  tracediff2.py  tracerepack.py  tracerepack.sh  unpickle.py
wrappers/: .gitignore  CMakeLists.txt  README.markdown  assert.cpp  cgltrace.py  config.cpp  config.hpp  d2d1.def  d2d1trace.def  d2d1trace.py  d3d10.def  d3d10_1.def  d3d10_1trace.py  d3d10shader.cpp  d3d10shader.hpp  d3d10stubs.cpp  d3d10trace.py  d3d11.def  d3d11hacks.hpp  d3d11stubs.cpp  d3d11trace.py  d3d12.def  d3d8.def  d3d8trace.py  d3d9.def  d3d9clamp.hpp  d3d9shader.cpp  d3d9shader.hpp  d3d9trace.py  d3dcommonshader.cpp  d3dcommonshader.hpp  d3dcommontrace.py  d3dkmtstubs.cpp  d3dshader.cpp  d3dshader.hpp  ddraw.def  ddrawtrace.py  dlltrace.hpp  dlltrace.py  dlopen.hpp  (+36 more)
zlib/: CMakeLists.txt  SConscript
(+286 files in other folders)
